build up step 1

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ WebRTCmeNuget.Share/obj/
 WebRTCmeNuget.Wasm/bin/
 
 WebRTCmeNuget.Wasm/obj/
+
+WebRTCmeNuget.Blazor/bin/
+
+WebRTCmeNuget.Blazor/obj/
