--- a/WebRTCmeNuget.Wasm/WebRTCmeNuget.Wasm.csproj
+++ b/WebRTCmeNuget.Wasm/WebRTCmeNuget.Wasm.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebRTCmeNuget.Share\WebRTCmeNuget.Share.csproj" />
+    <ProjectReference Include="..\WebRTCmeNuget.Blazor\WebRTCmeNuget.Blazor.csproj" />
   </ItemGroup>
 
 </Project>
