--- a/WebRTCmeNuget.Blazor/WebRTCmeNuget.Blazor.csproj
+++ b/WebRTCmeNuget.Blazor/WebRTCmeNuget.Blazor.csproj
@@ -15,6 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="WebRTCme.Api">
+      <HintPath>..\reference\WebRTCme.Api.dll</HintPath>
+    </Reference>
     <Reference Include="WebRTCme.Middleware">
       <HintPath>..\reference\WebRTCme.Middleware.dll</HintPath>
     </Reference>
